--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,6 +135,7 @@ jobs:
     needs: build
 
     steps:
+      - uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
