--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ members = [
     "crates/ast/*",
     "crates/libs/*",
     "crates/format/*",
-    "crates/query_engine/*"
+    "crates/query_engine/*",
 ]
